--- a/css/style.css
+++ b/css/style.css
@@ -405,6 +405,13 @@ button[type=submit] {
 	-webkit-transition: all 0.35s ease;
 	transition: all 0.35s ease;
 }
+.btn:hover .icon,
+input[type=button]:hover .icon,
+input[type=reset]:hover .icon,
+input[type=submit]:hover .icon,
+button[type=submit]:hover .icon {
+	fill: currentColor;
+}
 .btn--light {
 	background-color: #cff3f1;
 	border-color: #cff3f1;
@@ -412,6 +419,10 @@ button[type=submit] {
 }
 .btn--outline-primary {
 	border-color: #27277c;
+}
+.btn--outline-primary:hover {
+	color: #fff;
+	background-color: #27277c;
 }
 .btn--primary {
 	background-color: #27277c;
@@ -422,6 +433,17 @@ button[type=submit] {
 	border-color: #fff;
 	background-color: transparent;
 	color: #fff;
+}
+.btn .icon,
+input[type=button] .icon,
+input[type=reset] .icon,
+input[type=submit] .icon,
+button[type=submit] .icon {
+	display: inline-block;
+	vertical-align: middle;
+	margin-top: -1px;
+	margin-right: 5px;
+	fill: currentColor;
 }
 
 .btn-link {
@@ -676,7 +698,7 @@ h2,
 .h3,
 h3 {
 	font-size: var(--h3);
-	line-height: 35px;
+	line-height: 32px;
 	margin: 0 0 0.5em;
 }
 
@@ -706,7 +728,7 @@ h6,
 }
 
 p {
-	margin-bottom: 20px;
+	margin-bottom: 32px;
 	margin-top: 0;
 }
 p:last-child {
@@ -1778,7 +1800,7 @@ body {
 }
 
 .title--xl {
-	font-size: 40px;
+	font-size: 46px;
 	line-height: 1.15;
 	font-weight: 700;
 }
@@ -1792,11 +1814,13 @@ body {
 }
 
 .section {
-	padding: 80px 0;
+	padding: 160px 0;
 	position: relative;
 }
-
-.top-start--divider::before {
+.section.offset-bottom--0 {
+	padding-bottom: 0;
+}
+.divider--top-start::before {
 	content: "";
 	position: absolute;
 	top: -40px;
@@ -1808,8 +1832,7 @@ body {
 	-webkit-clip-path: polygon(0 5%, 0% 100%, 100% 100%);
 	        clip-path: polygon(0 5%, 0% 100%, 100% 100%);
 }
-
-.top-end--divider::before {
+.divider--top-end::before {
 	content: "";
 	position: absolute;
 	top: -40px;
@@ -1825,6 +1848,18 @@ body {
 .section-hero {
 	overflow: hidden;
 	position: relative;
+}
+.section-hero::before {
+	content: "";
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 9;
+	height: 120px;
+	background-color: #fff;
+	-webkit-clip-path: polygon(100% 0%, -193% 100%, 100% 100%);
+	        clip-path: polygon(100% 0%, -193% 100%, 100% 100%);
 }
 .section-hero__btns {
 	display: -webkit-box;
@@ -1868,18 +1903,6 @@ body {
 	position: relative;
 	min-height: 290px;
 }
-.hero-slide::before {
-	content: "";
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	z-index: 9;
-	height: 120px;
-	background-color: #fff;
-	-webkit-clip-path: polygon(100% 0%, -193% 100%, 100% 100%);
-	        clip-path: polygon(100% 0%, -193% 100%, 100% 100%);
-}
 .hero-slide__bg {
 	position: absolute;
 	top: 0;
@@ -1916,7 +1939,30 @@ body {
 }
 .hero-slide__headline h2 {
 	font-weight: normal;
+	letter-spacing: -1px;
 	margin: 0;
+}
+
+.section-intro {
+	position: relative;
+	overflow: hidden;
+}
+
+.intro-content {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-align: start;
+	    -ms-flex-align: start;
+	        align-items: flex-start;
+	max-width: 644px;
+}
+.intro-content .subtitle {
+	margin-bottom: 16px;
 }
 
 .event-card {
@@ -1936,9 +1982,32 @@ body {
 .event-card__item {
 	width: 100%;
 }
+.event-card__item:not(:first-child) {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-webkit-box-align: start;
+	    -ms-flex-align: start;
+	        align-items: flex-start;
+}
+.event-card .subtitle {
+	color: #cff3f1;
+	margin-bottom: 16px;
+}
+.event-card__title {
+	margin-bottom: 16px;
+}
 .event-card__description {
 	font-size: 18px;
 	line-height: 1.45;
+	color: #cff3f1;
 }
 .event-card__description dl {
 	padding: 0;
@@ -1982,6 +2051,8 @@ body {
 	        justify-content: space-between;
 }
 .mission-tile__headtitle {
+	-ms-flex-negative: 0;
+	    flex-shrink: 0;
 	margin-bottom: 43px;
 }
 
@@ -2010,8 +2081,9 @@ body {
 	padding-top: 20px;
 }
 .highlights__num {
-	font-size: 64px;
+	font-size: 46px;
 	line-height: 1.1;
+	letter-spacing: -1px;
 	font-weight: bold;
 	margin: 0 0 4px;
 }
@@ -2024,11 +2096,14 @@ body {
 	-webkit-box-direction: normal;
 	    -ms-flex-direction: column;
 	        flex-direction: column;
-	gap: 58px;
+	gap: 32px;
 }
 .tile-content__visual {
 	-ms-flex-negative: 0;
 	    flex-shrink: 0;
+}
+.tile-content__visual:not(.double) .image {
+	width: 100%;
 }
 .tile-content__visual.double {
 	display: -webkit-box;
@@ -2052,15 +2127,41 @@ body {
 .tile-content__inner input[type=submit],
 .tile-content__inner button[type=submit] {
 	width: 100%;
+	margin-bottom: 32px;
+}
+.tile-content__inner .btn::last-child,
+.tile-content__inner input[type=button]::last-child,
+.tile-content__inner input[type=reset]::last-child,
+.tile-content__inner input[type=submit]::last-child,
+.tile-content__inner button[type=submit]::last-child {
+	margin-bottom: 0;
+}
+
+.cta-links {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	gap: 32px;
+	font-size: 16px;
+	line-height: 1.2;
+}
+.cta-links a {
+	text-decoration: underline;
 }
 
 .image {
 	border-radius: 8px;
 }
-.image--rounded-bottom {
+.image--rounded-bottom-start {
 	border-bottom-left-radius: 88px;
 }
-.image--rounded-top {
+.image--rounded-bottom-end {
+	border-bottom-right-radius: 88px;
+}
+.image--rounded-top-end {
 	border-top-right-radius: 88px;
 }
 
@@ -2081,6 +2182,11 @@ body {
 	min-height: 360px;
 	height: 100%;
 	border-radius: 16px;
+	-webkit-transition: all 0.35s ease;
+	transition: all 0.35s ease;
+}
+.article-card:hover {
+	border-top-right-radius: 88px;
 }
 
 .article-head {
@@ -2116,7 +2222,7 @@ body {
 	-webkit-box-align: center;
 	    -ms-flex-align: center;
 	        align-items: center;
-	gap: 32px;
+	gap: 24px;
 	margin-bottom: 38px;
 }
 .slider-nav__prev,
@@ -2132,13 +2238,22 @@ body {
 	        justify-content: center;
 	width: 48px;
 	height: 48px;
+	cursor: pointer;
 	border: 1px solid #fff;
 	border-radius: 50%;
 }
-.slider-nav__prev img,
-.slider-nav__next img {
+.slider-nav__prev:hover,
+.slider-nav__next:hover {
+	background-color: #fff;
+}
+.slider-nav__prev:hover .icon,
+.slider-nav__next:hover .icon {
+	fill: #27277c;
+}
+.slider-nav__prev .icon,
+.slider-nav__next .icon {
 	display: block;
-	width: 16px;
+	fill: #fff;
 }
 
 .event-table {
@@ -2179,9 +2294,10 @@ body {
 	-webkit-box-direction: normal;
 	    -ms-flex-direction: column;
 	        flex-direction: column;
+	gap: 12px;
 }
 .event-row__title {
-	margin-bottom: 12px;
+	margin-bottom: 0;
 }
 .event-row__date {
 	display: -webkit-box;
@@ -2219,6 +2335,9 @@ body {
 	-webkit-box-direction: normal;
 	    -ms-flex-direction: column;
 	        flex-direction: column;
+}
+.event-tile__btn {
+	margin-bottom: 32px;
 }
 .event-tile__content {
 	width: 100%;
@@ -2267,7 +2386,6 @@ body {
 	position: relative;
 	z-index: 99;
 	background-color: #fff;
-	padding: 20px 0;
 }
 .header__logo {
 	width: 182px;
@@ -2282,6 +2400,8 @@ body {
 }
 .header__wrapper {
 	position: relative;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 .header-notification {
@@ -2354,26 +2474,15 @@ body {
 	border: 1px solid #e0f2ff;
 	background-color: transparent;
 	height: 50px;
+	color: #e0f2ff;
 	border-radius: 100px;
 	-webkit-transition: opacity 0.35s ease;
 	transition: opacity 0.35s ease;
 }
-.header-search .form-control::-webkit-input-placeholder {
-	color: #c0c0d2;
-}
 
-.header-search .form-control:-moz-placeholder {
-	color: #c0c0d2;
+.header-search .form-control:focus {
+	border-color: #fff;
 }
-
-.header-search .form-control::-moz-placeholder {
-	color: #c0c0d2;
-}
-
-.header-search .form-control:-ms-input-placeholder {
-	color: #c0c0d2;
-}
-
 .header-search .btn-search,
 .header-search .btn-cancel {
 	position: absolute;
@@ -2386,7 +2495,7 @@ body {
 }
 .header-search .btn-cancel {
 	right: 10px;
-	font-size: 15px;
+	margin-top: 10px;
 }
 
 .btn-search {
@@ -2404,8 +2513,9 @@ body {
 	height: 18px;
 	overflow: hidden;
 	left: 0;
-	color: #34495e;
+	color: #27277c;
 	font-size: 16px;
+	line-height: 22px;
 }
 .btn-search__icon {
 	-ms-flex-negative: 0;
@@ -2415,7 +2525,7 @@ body {
 .nav-opener {
 	display: block;
 	position: absolute;
-	right: 38px;
+	right: 25px;
 	top: 13px;
 	width: 24px;
 	height: 16px;
@@ -2455,7 +2565,6 @@ body {
 body.nav-active .nav-opener {
 	position: fixed;
 	top: 33px;
-	right: 25px;
 }
 body.nav-active .nav-opener span {
 	background-color: transparent;
@@ -2509,7 +2618,7 @@ body.nav-active .nav-opener:before {
 	    -ms-flex-direction: column;
 	        flex-direction: column;
 	width: 100%;
-	gap: 32px;
+	gap: 24px;
 	margin: 0;
 }
 .menu__item.has-submenu {
@@ -2589,25 +2698,22 @@ body.nav-active .nav-opener:before {
 	line-height: 26px;
 	color: #e0f2ff;
 }
+.header-link__link:hover {
+	text-decoration: underline;
+}
 .header-link__link--primary .icon,
 .header-link__link--outline .icon {
 	-ms-flex-negative: 0;
 	    flex-shrink: 0;
 	margin-right: 7px;
-	-webkit-transition: all 0.35s ease;
-	transition: all 0.35s ease;
-}
-.header-link__link--primary .icon {
-	fill: #fff;
-}
-.header-link__link--outline .icon {
-	fill: #27277c;
+	fill: currentColor;
 }
 
 .footer {
 	background-color: #27277c;
 	color: #fff;
 	overflow: hidden;
+	position: relative;
 }
 
 .footer-upper {
@@ -2710,10 +2816,28 @@ body.nav-active .nav-opener:before {
 	   -moz-column-break-inside: avoid;
 	        break-inside: avoid;
 }
+.footer-menu__link {
+	color: #e0f2ff;
+}
+.footer-menu__link:hover {
+	color: #fff;
+	text-decoration: underline;
+}
 
 .footer-under {
 	padding: 20px 0;
 	border-top: 1px solid rgba(255, 255, 255, 0.2);
+}
+.footer-under__img {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	width: 34%;
+	z-index: 0;
+}
+.footer-under__img img {
+	display: block;
+	width: 100%;
 }
 
 .footer-link {
@@ -2728,7 +2852,7 @@ body.nav-active .nav-opener:before {
 	    flex-wrap: wrap;
 	font-size: 12px;
 	line-height: 20px;
-	gap: 20px 27px;
+	gap: 16px 27px;
 	margin: 0;
 }
 
@@ -2780,6 +2904,9 @@ body.nav-active .nav-opener:before {
 .subscribe-form .form-field {
 	width: 100%;
 }
+.subscribe-form .form-field:last-child {
+	padding-top: 16px;
+}
 @media (max-width: 1023px) {
 	h5,
 	.h5 {
@@ -2791,6 +2918,21 @@ body.nav-active .nav-opener:before {
 	.text--m {
 		font-size: 18px;
 		line-height: 26px;
+	}
+	.section {
+		padding: 80px 0;
+	}
+	.header-search .form-control::-webkit-input-placeholder {
+		color: #c0c0d2;
+	}
+	.header-search .form-control:-moz-placeholder {
+		color: #c0c0d2;
+	}
+	.header-search .form-control::-moz-placeholder {
+		color: #c0c0d2;
+	}
+	.header-search .form-control:-ms-input-placeholder {
+		color: #c0c0d2;
 	}
 	.nav-active {
 		overflow: hidden;
@@ -2856,6 +2998,9 @@ body.nav-active .nav-opener:before {
 	.header-link__link--outline .icon {
 		display: none;
 	}
+	.footer-under__img {
+		display: none;
+	}
 }
 @media (max-width: 767px) {
 	.event-card__item {
@@ -2886,6 +3031,9 @@ body.nav-active .nav-opener:before {
 	}
 }
 @media (max-width: 479px) {
+	.w-100 {
+		width: 100%;
+	}
 	.subscribe-form .btn,
 	.subscribe-form input[type=button],
 	.subscribe-form input[type=reset],
@@ -2992,8 +3140,13 @@ body.nav-active .nav-opener:before {
 		line-height: 56px;
 		margin: 0 0 24px;
 	}
-	p {
-		margin-bottom: 30px;
+	.h3,
+	h3 {
+		line-height: 35px;
+	}
+	.subtitle--bg {
+		padding: 6px 16px;
+		background-color: #fff;
 	}
 	.hidden--md {
 		display: none !important;
@@ -3001,16 +3154,21 @@ body.nav-active .nav-opener:before {
 	.title--xl {
 		font-size: 64px;
 	}
-	.section {
-		padding: 160px 0;
+	.divider {
+		padding-top: 90px;
 	}
-	.top-start--divider::before {
+	.divider--top-start::before {
 		top: -160px;
 		height: 160px;
 	}
-	.top-end--divider::before {
+	.divider--top-end::before {
 		top: -160px;
 		height: 160px;
+	}
+	.section-hero::before {
+		height: 160px;
+		-webkit-clip-path: polygon(100% 0%, -15% 100%, 100% 100%);
+		        clip-path: polygon(100% 0%, -15% 100%, 100% 100%);
 	}
 	.section-hero__btns {
 		z-index: 10;
@@ -3026,10 +3184,8 @@ body.nav-active .nav-opener:before {
 		min-height: 671px;
 		padding: 180px 0;
 	}
-	.hero-slide::before {
-		height: 160px;
-		-webkit-clip-path: polygon(100% 0%, -15% 100%, 100% 100%);
-		        clip-path: polygon(100% 0%, -15% 100%, 100% 100%);
+	.section-intro {
+		padding: 72px 0 106px;
 	}
 	.content-tile {
 		-webkit-box-orient: horizontal;
@@ -3051,9 +3207,11 @@ body.nav-active .nav-opener:before {
 		-webkit-box-direction: normal;
 		    -ms-flex-direction: row;
 		        flex-direction: row;
+		gap: 60px;
 	}
 	.mission-tile__headtitle {
 		margin-bottom: 0;
+		width: 31%;
 	}
 	.mission-tile__content {
 		max-width: 757px;
@@ -3070,8 +3228,11 @@ body.nav-active .nav-opener:before {
 	}
 	.highlights__item {
 		max-width: 306px;
-		padding-top: 0;
+		padding-top: 7px;
 		width: calc(50% - 24px);
+	}
+	.highlights__num {
+		font-size: 64px;
 	}
 	.tile-content {
 		-webkit-box-orient: horizontal;
@@ -3081,7 +3242,16 @@ body.nav-active .nav-opener:before {
 		-webkit-box-align: center;
 		    -ms-flex-align: center;
 		        align-items: center;
+		-webkit-box-pack: justify;
+		    -ms-flex-pack: justify;
+		        justify-content: space-between;
 		gap: 112px;
+	}
+	.tile-content__visual {
+		width: 51.3%;
+	}
+	.tile-content__visual:not(.double) {
+		width: 40.3%;
 	}
 	.tile-content__visual.double {
 		gap: 16px;
@@ -3092,15 +3262,17 @@ body.nav-active .nav-opener:before {
 	.tile-content__inner {
 		max-width: 531px;
 	}
-	.image--rounded-bottom {
+	.image--rounded-bottom-start {
 		border-bottom-left-radius: 120px;
 	}
-	.image--rounded-top {
+	.image--rounded-bottom-end {
+		border-bottom-right-radius: 120px;
+	}
+	.image--rounded-top-end {
 		border-top-right-radius: 120px;
 	}
 	.article-card {
 		min-height: 431px;
-		border-radius: 24px;
 	}
 	.article-head {
 		-webkit-box-orient: horizontal;
@@ -3116,17 +3288,30 @@ body.nav-active .nav-opener:before {
 		gap: 60px;
 		margin-bottom: 80px;
 	}
+	.slider-wrap {
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-align: start;
+		    -ms-flex-align: start;
+		        align-items: flex-start;
+		position: relative;
+	}
 	.article-slider {
-		padding-left: 17%;
 		margin-bottom: 0;
+		width: 100%;
+		overflow: hidden;
+		margin-right: -338px;
+		padding-right: 338px;
 	}
 	.article-slider .swiper-slide {
 		width: 306px;
 	}
 	.slider-nav {
-		position: absolute;
-		top: 0;
-		left: 0;
+		gap: 32px;
+		-ms-flex-negative: 0;
+		    flex-shrink: 0;
+		width: 225px;
 		margin: 0;
 	}
 	.event-tile {
@@ -3147,6 +3332,7 @@ body.nav-active .nav-opener:before {
 		position: absolute;
 		top: 15px;
 		right: 0;
+		margin: 0;
 	}
 	.event-tile__content {
 		max-width: 869px;
@@ -3166,9 +3352,6 @@ body.nav-active .nav-opener:before {
 		    -ms-flex-direction: row;
 		        flex-direction: row;
 	}
-	.header {
-		padding: 0;
-	}
 	.header__logo {
 		position: absolute;
 		width: 230px;
@@ -3177,6 +3360,7 @@ body.nav-active .nav-opener:before {
 	}
 	.header__wrapper {
 		padding-top: 32px;
+		padding-bottom: 0;
 	}
 	.header-search {
 		position: absolute;
@@ -3213,6 +3397,7 @@ body.nav-active .nav-opener:before {
 		font-size: 16px;
 		background-color: #fff;
 		border: none;
+		color: #27277c;
 		padding: 0 30px;
 		border-radius: 0;
 	}
@@ -3273,8 +3458,9 @@ body.nav-active .nav-opener:before {
 	}
 	.has-submenu .menu__link::before {
 		right: 0;
-		width: 6px;
-		height: 6px;
+		width: 8px;
+		height: 8px;
+		margin-top: -6px;
 		border-bottom-color: #27277c;
 		border-left-color: #27277c;
 	}
@@ -3282,7 +3468,7 @@ body.nav-active .nav-opener:before {
 		position: absolute;
 		top: -9999px;
 		left: -9999px;
-		margin: -10px 0 0 -70px;
+		margin: -10px 0 0 -25px;
 		opacity: 0;
 		z-index: 150;
 		display: -webkit-box;
@@ -3293,7 +3479,7 @@ body.nav-active .nav-opener:before {
 		    -ms-flex-direction: column;
 		        flex-direction: column;
 		white-space: nowrap;
-		padding: 24px 32px;
+		padding: 24px;
 		min-width: calc(100% + 136px);
 		background-color: #fff;
 		border: 1px solid #d7d7e6;
@@ -3312,7 +3498,7 @@ body.nav-active .nav-opener:before {
 		color: #27277c;
 	}
 	.sub-menu li a:hover {
-		text-decoration: underline;
+		color: #1c88ed;
 	}
 	.header-link {
 		-webkit-box-orient: horizontal;
@@ -3339,7 +3525,19 @@ body.nav-active .nav-opener:before {
 		border: 1px solid #27277c;
 		border-radius: 100px;
 	}
+	.header-link__link--primary:hover,
+	.header-link__link--outline:hover {
+		text-decoration: none;
+	}
 	.header-link__link--primary {
+		color: #fff;
+		background-color: #27277c;
+	}
+	.header-link__link--primary:hover {
+		color: #27277c;
+		background-color: transparent;
+	}
+	.header-link__link--outline:hover {
 		color: #fff;
 		background-color: #27277c;
 	}
@@ -3368,5 +3566,8 @@ body.nav-active .nav-opener:before {
 	.footer-menu {
 		gap: 20px;
 		margin-bottom: 62px;
+	}
+	.footer-under {
+		max-width: 64%;
 	}
 }
